[gerrit]Add config introduction